--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "mui-tel-input": "^4.0.0",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
+    "styled-components": "^5.3.11",
+    "typescript": "5.2.2",
+    "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "msw": "^1.3.1"
   }
 }
