--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.5.2",
     "mui-tel-input": "^4.0.0",
     "next": "13.5.2",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
