--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.11",
     "swiper": "^10.3.0",
     "typescript": "5.2.2",
