--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
+    "@opentelemetry/api": "^1.6.0",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "@types/node": "20.6.3",
@@ -21,10 +22,10 @@
     "@types/react-dom": "18.2.7",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.2",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.3.2",
     "mui-tel-input": "^4.0.0",
-    "next": "13.4.0",
+    "next": "13.3.2",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@types/next": "^9.0.0",
     "msw": "^1.3.1"
   }
 }
