--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.2.7",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
+    "emoji-picker-react": "^4.5.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.3.2",
     "mui-tel-input": "^4.0.0",
