--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
+    "react-input-emoji": "^5.6.5",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "styled-components": "^5.3.11",
